M0: technical verification of chronicle-queue 5.27ea5 on JDK 21
- Multi-module skeleton (latchq-parent + latchq-core) with Maven Wrapper 3.9.16
- 10/10 verification tests pass (ChronicleApiVerificationTest), covering:
  concurrent appender writes, index density, roll-boundary idle-skip trap,
  moveToIndex restore semantics, firstIndex/lastIndex, dirty-tail recovery,
  storeFileListener + cycle file deletion while queue is open, appender.sync()
- Findings archived in docs/spike-notes.md and backfilled into the design
  doc section 10 (v0.3, design frozen); nextIndex route B (look-ahead) chosen
- JDK 21 --add-opens flag set pinned into surefire argLine